--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -1,11 +1,13 @@
-body {
-  padding: 20px;
-}
 .alert-span {
   position: fixed;
   border-top: 6px solid red;
   padding: 10px 15px 15px 15px;
-  transition: opacity 0.3s;
+  animation-name: open;
+  animation-duration: 0.3s;
+}
+@keyframes open {
+  0% { top: 0px; }
+  100% { top: 65px; }
 }
 .alert-title {
   font-size: 14px;
