--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -1,6 +1,8 @@
+@import './variables';
+
 .alert-span {
   position: fixed;
-  border-top: 6px solid red;
+  border-top: 6px solid $strawberry-red;
   padding: 10px 15px 15px 15px;
   animation-name: openAlert;
   animation-duration: 0.3s;
@@ -13,23 +15,22 @@
   font-size: 14px;
 }
 strong {
-  color: red;
+  color: $strawberry-red;
 }
 .alert-body {
   font-size: 14px;
 }
-.close-title {
+.alert-span .close-title {
   float: right;
   font-size: 30px;
 }
 .close-title-animation {
   animation-name: closeAlert;
-  animation-duration: 0.2s;
+  animation-duration: .2s;
 }
-
 @keyframes closeAlert {
   0% { left: 70px; top: 65px; }
-  100% { left: -400px; top: 65px; }
+  100% { left: -550px; top: 65px; }
 }
 .close-title:hover {
   cursor: pointer;
