fix: Title and body text handled through state

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -21,7 +21,7 @@ strong {
 .alert-body {
   font-size: 14px;
 }
-.alert-span .close-title {
+.close-title {
   float: right;
   margin-top: -10px;
   font-size: 30px;
