fix: Icons rendering to the alert

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -7,6 +7,10 @@
   animation-name: openAlert;
   animation-duration: .3s;
 }
+.pe-icon--remove-lg-18 {
+  height: 0;
+  width: 0;
+}
 #Error {
   border-top: $alert-top-border $pe-color-strawberry-red;
 }
