--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -42,6 +42,6 @@ svg {
   animation-duration: .2s;
 }
 @keyframes closeAlert {
-  0% { top: 50px; }
-  100% { left: -550px; top: 50px; }
+  0% { }
+  100% { left: -550px; }
 }
