--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -4,21 +4,18 @@
 .pe-alert {
   margin-top: 30px;
   list-style:none;
+  animation-name: openAlert;
+  animation-duration: .3s;
+  background-color: $pe-color-white;
+  padding: $alert-padding;
 }
 
 .alertList {
-  right: 0;
+  width:35%;
+  float:right;
+  margin-right:2%;
 }
 
-.pe-template__static-small {
-  position: fixed;
-  top: 50px;
-  left: 35px;
-  background-color: $pe-color-white;
-  padding: $alert-padding;
-  animation-name: openAlert;
-  animation-duration: .3s;
-}
 
 li[id^="alert-error"] {
   border-top: $alert-border-top $pe-color-strawberry-red;
@@ -35,7 +32,7 @@ svg {
 
 @keyframes openAlert {
   0% { top: -75px; }
-  100% { top: 50px; }
+  100% { top: 0px; }
 }
 
 .error-title {
