--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -1,6 +1,7 @@
 @import './variables';
 
 .pe-alert {
+  position:relative;
   margin-top: 30px;
   list-style:none;
   animation-name: openAlert;
@@ -32,7 +33,7 @@ svg {
 }
 
 @keyframes openAlert {
-  0% { top: 200px; }
+  0% { top: -200px; }
   100% { top: 0px; }
 }
 
@@ -57,10 +58,10 @@ svg {
 
 .close-title-animation {
   animation-name: closeAlert;
-  animation-duration: .2s;
+  animation-duration: 3.2s;
 }
 
 @keyframes closeAlert {
   0% {}
-  100% { left: -510px; }
+  100% { left: 1510px; }
 }
