--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -33,7 +33,7 @@ svg {
 }
 
 @keyframes openAlert {
-  0% { top: -200px; }
+  0% { top: -500px; }
   100% { top: 0px; }
 }
 
@@ -58,10 +58,10 @@ svg {
 
 .close-title-animation {
   animation-name: closeAlert;
-  animation-duration: 3.2s;
+  animation-duration: 1.2s;
 }
 
 @keyframes closeAlert {
-  0% {}
-  100% { left: 1510px; }
+  0% { right: 0px;}
+  100% { right: 1500px; }
 }
