--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -11,7 +11,8 @@
 .alertList {
   position:fixed;
   width:35%;
-  margin-right:2%;
+  margin-left: 5%;
+  margin-right:5%;
 }
 
 
@@ -47,27 +48,6 @@ svg {
   background: transparent;
 }
 
-<<<<<<< HEAD
-.close-title-animation {
-  position:relative;
-  margin-top: 30px;
-  list-style:none;
-  background-color: #ffffff;
-  padding: $alert-padding;
-  //animation-name: closeAlert;
-  //animation-duration: 1.2s;
-}
-
-//@keyframes closeAlert {
-//  0% { right: 0px;}
-//  100% { right: 1500px;}
-//}
-
-
-//=========================================
-
-=======
->>>>>>> 90c27201518ebec64da81868be79384721f74b7f
 .transition-enter {
   transform:   translate(0,-250px);
   transform: translate3d(0,-250px,0);
