--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -1,6 +1,9 @@
 @import './variables';
 
 .pe-alert {
+  &:first-child {
+    margin-top: 50px !important;
+  }
   position:relative;
   margin-top: 20px;
   list-style:none;
@@ -10,7 +13,7 @@
 
 .alertList {
   position:fixed;
-  margin-left: 4%;
+  margin-left: -1.5%;
   margin-right: 4%;
 }
 
@@ -74,18 +77,18 @@ svg {
 	transform: translate3d(0,0,0);
 	transition-property: transform;
 	transition-duration: 300ms;
-	transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), linear;
+	transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), ease-in-out;
 }
 
 .transition-leave {
 	transform:   translate(0,0,0);
 	transform: translate3d(0,0,0);
   transition-property: transform;
-	transition-duration: 800ms;
-	transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), linear;
+	transition-duration: 200ms;
+	transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), ease-in;
 }
 
 .transition-leave.transition-leave-active {
-	transform:   translate(-1450px,0);
-	transform: translate3d(-1450px,0,0);
+	transform:   translate(-500px,0);
+	transform: translate3d(-500px,0,0);
 }
