chore: add box-shadow per console design

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -9,6 +9,7 @@
   list-style: none;
   background-color: #ffffff;
   padding: $alert-padding;
+  box-shadow: 0 1px 1px 1px #f5f5f5;
 }
 
 .alertList {
