--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -2,14 +2,14 @@
 
 .pe-alert {
   &:first-child {
-    margin-top: 50px !important;
+    margin-top: 50px;
   }
   position: relative;
   margin-top: 20px;
   list-style: none;
   background-color: #ffffff;
   padding: $alert-padding;
-  box-shadow: 0 1px 1px 1px #f5f5f5;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16);
 }
 
 .alertList {
@@ -29,12 +29,14 @@
   }
 }
 
-li[id^="alert-Error"] {
-  border-top: $alert-border-top #db0020;
+li[id^="alert-Error"],
+li[id^="alert-Warning"] {
+  border-left: $alert-border-left #db0020;
 }
 
-li[id^="alert-Success"] {
-  border-top: $alert-border-top #038238;
+li[id^="alert-Success"],
+li[id^="alert-Information"] {
+  border-left: $alert-border-left #19A5A3;
 }
 
 svg {
@@ -42,23 +44,19 @@ svg {
   width: 0;
 }
 
-.Error-title {
-  color: #db0020;
+.alert-title {
+  margin-right: 4px;
 }
 
-.Success-title {
-  color: #038238;
-}
-
-.pe-copy {
-  display: block;
-  padding-top: 8px;
+.alert-text {
+  margin-bottom: 0;
 }
 
 .close-title {
   float: right;
   border: none;
   background: transparent;
+  padding: 0;
 }
 
 .transition-enter {
