--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,2 +1,2 @@
-$alert-padding: 10px 15px 15px 15px;
-$alert-border-top: 6px solid;
+$alert-padding: 8px 8px 28px 28px;
+$alert-border-left: 3px solid;
