--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -7,7 +7,7 @@
   position: relative;
   margin-top: 20px;
   list-style: none;
-  background-color: #ffffff;
+  background-color: #FFF;
   padding: $alert-padding;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16);
 }
@@ -29,8 +29,7 @@
   }
 }
 
-li[id^="alert-Error"],
-li[id^="alert-Warning"] {
+li[id^="alert-Error"] {
   border-left: $alert-border-left #db0020;
 }
 
@@ -44,12 +43,39 @@ svg {
   width: 0;
 }
 
+.error-svg {
+  color: #db0020;
+  display: inline;
+  margin-top: 7px;
+}
+
+.success-svg {
+  color: #19A5A3;
+  display: inline;
+}
+
+.alert-content-container {
+  display: flex;
+}
+
+.alert-content- {
+  margin-left: 12px;
+  padding: 2px 2px 0 0;
+}
+
+.alert-content-info {
+  margin: 0;
+  padding: 2px 2px 0 0;
+}
+
 .alert-title {
   margin-right: 4px;
+  display: inline;
 }
 
 .alert-text {
   margin-bottom: 0;
+  display: inline;
 }
 
 .close-title {
