--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,2 +1,4 @@
 $alert-padding: 8px 8px 28px 28px;
 $alert-border-left: 3px solid;
+$alert-border-nonLeft: 1px solid #C7C7C7;
+$alert-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16);
