--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -2,8 +2,9 @@
 
 .pe-alert {
   &:first-child {
-    margin-top: 50px;
+    margin-top: 32px;
   }
+
   position: relative;
   margin-top: 20px;
   list-style: none;
@@ -14,18 +15,44 @@
 .alertList {
   position: fixed;
   margin: 0;
+  -webkit-padding-start: 0;
+  padding-left: 32px;
+  width: 580px;
 }
 
-@media only screen and (min-width: 769px) {
+.alert-content- {
+  margin-left: 12px;
+  padding: 2px 2px 0 0;
+}
+
+.alert-content-info {
+  margin: 0;
+  padding: 2px 2px 0 0;
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
   .alertList {
-    width: 30%;
+    width: 440px;
+    padding: 0 25px;
+  }
+
+  .pe-alert {
+    &:first-child {
+      margin-top: 36px;
+    }
+
+    padding: $alert-responsive-padding;
+  }
+
+  .alert-content-,
+  .alert-content-info {
+    padding-right: 8px;
   }
 }
 
-@media only screen and (max-width: 768px) {
-  ul.alertList {
-    width: 100%;
-    -webkit-padding-start: 0;
+@media (min-width: 320px) and (max-width: 479px) {
+  .alertList {
+    width: auto;
   }
 }
 
@@ -67,16 +94,6 @@ svg {
   display: flex;
 }
 
-.alert-content- {
-  margin-left: 12px;
-  padding: 2px 2px 0 0;
-}
-
-.alert-content-info {
-  margin: 0;
-  padding: 2px 2px 0 0;
-}
-
 .alert-title {
   margin-right: 4px;
   display: inline;
@@ -95,8 +112,8 @@ svg {
 }
 
 .transition-enter {
-  transform:   translate(0,-250px);
-  transform: translate3d(0,-250px,0);
+  transform:   translate(0,-350px);
+  transform: translate3d(0,-350px,0);
 }
 
 .transition-enter.transition-enter-active {
@@ -116,6 +133,6 @@ svg {
 }
 
 .transition-leave.transition-leave-active {
-	transform:   translate(-500px,0);
-	transform: translate3d(-500px,0,0);
+	transform:   translate(-600px,0);
+	transform: translate3d(-600px,0,0);
 }
