refactor: cleanup callbacks

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -20,7 +20,7 @@
   width: 580px;
 }
 
-.alert-content- {
+.alert-content {
   margin-left: 12px;
   padding: 4px 12px 0 0;
 }
@@ -44,7 +44,7 @@
     padding: $alert-responsive-padding;
   }
 
-  .alert-content-,
+  .alert-content,
   .alert-content-info {
     padding-right: 8px;
   }
