upgrade react, new transition api

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -126,7 +126,7 @@ svg {
 	transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), ease-in-out;
 }
 
-.transition-leave {
+.transition-exit {
 	transform:   translate(0,0,0);
 	transform: translate3d(0,0,0);
   transition-property: transform;
@@ -134,7 +134,7 @@ svg {
 	transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), ease-in;
 }
 
-.transition-leave.transition-leave-active {
+.transition-exit.transition-exit-active {
 	transform:   translate(-600px,0);
 	transform: translate3d(-600px,0,0);
 }
